vlib/v/checker/tests/mut_receiver_wrong_return_type.vv
struct Test {}

fn (mut test Test) test() ?int {
	return test
}

fn (mut test Test) test2() int {
	return test
}
